Added kill roblox button, and cleaned some code.

--- a/Xivion/Xivion.csproj
+++ b/Xivion/Xivion.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration\Settings.cs" />
+    <Compile Include="Helpers\GridHelper.cs" />
     <Compile Include="Windows\MainWindow.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
